objects/Maintenance_Ticket_solution__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of whats needed in the maintenance ticket.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employee who tends to or fixes whatever the maintenance ticket is about.</description>
        <label>Maintenance Worker</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Maintenance Tickets (solution)</relationshipLabel>
        <relationshipName>Maintenance_Tickets_solution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <referenceTo>Stage_solution__c</referenceTo>
        <relationshipLabel>Maintenance Tickets (solution)</relationshipLabel>
        <relationshipName>Maintenance_Tickets_solution</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Maintenance Ticket (solution)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TKT-{0000}</displayFormat>
        <label>Maintenance Ticket (solution) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Tickets (solution)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>